--- a/td4/app/views/InscriptionController/.old/get.html
+++ b/td4/app/views/InscriptionController/.old/get.html
@@ -1,8 +1,8 @@
 <!--View associated to get action of InscriptionController controller -->
 {{name}}
-{{addrmel}}
+{{addlou}}
 
 <?php
-$_GET["addrmel"]
+$_GET["addlou"]
 
 ?>
