--- a/td4/app/views/InscriptionController/bouton.html
+++ b/td4/app/views/InscriptionController/bouton.html
@@ -1,6 +1,6 @@
 <!--View associated to bouton action of InscriptionController controller -->
-<form name="inscription" method="post" action="/do/inscriptiona">
+<form name="inscription" method="post" action="/do/inscription">
 	Nom ou pseudo : <input type="text" name="nom"/> <br/>
-	Entrer votre addresse mail : <input type="text" name="addrmel"/><br/>
+	Entrer votre addresse mail : <input type="text" name="addlou"/><br/>
 	<input type="submit" name="valider" value="Valider l'inscription"/>
 </form>
