--- a/td4/app/views/InscriptionController/index.html
+++ b/td4/app/views/InscriptionController/index.html
@@ -1,7 +1,7 @@
-<div class="ui message">
+<div class="UHOO">
 	<div class="header">
 		Hey
-		<p>Inscrit toi haha</p>
+		<p>Viens t'inscrire mon gars</p>
 
 		<form class="ui button active" name="inscription" method="post" action="/inscription">
         <input type="submit" name="valider" value="inscription"/>
