--- a/td4/app/views/InscriptionController/.old/bouton.html
+++ b/td4/app/views/InscriptionController/.old/bouton.html
@@ -1,6 +1,6 @@
 <!--View associated to bouton action of InscriptionController controller -->
 <form name="inscription" method="get" action="/do/inscription">
 	Nom ou pseudo : <input type="text" name="name"/> <br/>
-	Entrer votre addresse mail : <input type="text" name="addrmel"/><br/>
+	Entrer votre addresse mail : <input type="text" name="addlou"/><br/>
 	<input type="submit" value="Valider l'inscription"/>
 </form>
